--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,7 +16,7 @@ jobs:
         ruby: ['3.0', '3.1', '3.2', '3.3']
 
         # Rails 6.0 became EOL on 2023-06-01; kept for information only
-        rails: ['6.0.6.1', '6.1.7.8', '7.0.8.4', '7.1.3.4', '7.2.0']
+        rails: ['6.0.6.1', '6.1.7.8', '7.0.8.4', '7.1.3.4', '7.2.0', '8.0.0']
 
         exclude:
         # Excludes Rails 6.0 on Ruby 3.0+
@@ -31,6 +31,14 @@ jobs:
           ruby: '3.3'
         - rails: '7.2.0'
           ruby: '3.0'
+        - rails: '8.0.0'
+          ruby: '2.6'
+        - rails: '8.0.0'
+          ruby: '2.7'
+        - rails: '8.0.0'
+          ruby: '3.0'
+        - rails: '8.0.0'
+          ruby: '3.1'
     name: Ruby ${{ matrix.ruby }}, Rails ${{ matrix.rails }}
     env:
       RAILS_VERSION: ${{ matrix.rails }}
